SSL/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: jesuspb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: non-existent-service
                port:
                  number: 80
    - host: portfolio.jesuspb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: non-non-existent-service
                port:
                  number: 80
    - host: crazyweekend570.jesuspb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: backend.jesuspb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000 
  tls:
  - hosts:
    - jesuspb.dev
    - portfolio.jesuspb.dev
    - crazyweekend570.jesuspb.dev
    - backend.jesuspb.dev
    secretName: jesuspb-dev-tls
